Fixed modal position and animation to eliminate wrong positioning in menu mobile

--- a/src/sass/_main-styles.scss
+++ b/src/sass/_main-styles.scss
@@ -79,11 +79,12 @@ a {
   box-shadow: rgba(0,0,0,0.35) 0.8em 0.8em 0px;
   display: flex;
   flex-direction: column;
-  margin: -100% auto 0 auto;
+  margin: 0 auto;
   align-self: flex-start;
   max-width: 75%;
   flex: 0 1 500px;
   overflow: hidden;
+  transform: translateY(-3000px);
   //transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
   &.active {
     margin-top: 120px;
